--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <!-- Primary SEO Meta Tags -->
     <title>XMONIE | Best VTU Platform for Airtime, Data & Bill Payments in Nigeria</title>
     <meta name="title" content="XMONIE | Best VTU Platform for Airtime, Data & Bill Payments in Nigeria">
-    <meta name="description" content="Join XMONIE for the fastest Airtime to Cash conversion, cheap SME data bundles, Cable TV subscriptions, and Exam Pins. Earn ₦100 per referral. Secure and reliable VTU services.">
+    <meta name="description" content="Join XMONIE for the fastest Airtime to Cash conversion, cheap SME data bundles, Cable TV subscriptions, Nin retrieval, buy followers and Exam Pins. Earn ₦100 per referral. Secure and reliable VTU services.">
     <meta name="keywords" content="XMONIE, VTU Nigeria, Airtime to Cash, Cheap MTN Data, Buy WAEC Pin, DStv Subscription Nigeria, Sportybet Funding, SME Data">
     <meta name="author" content="XMONIE Tech">
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://xmonie.com/">
+    <meta property="og:url" content="https://xmoniepay.vercel.app/">
     <meta property="og:title" content="XMONIE - Instant VTU & Bill Payments">
     <meta property="og:description" content="Fast, automated, and secure utility payments. Get the best rates on data and airtime.">
-    <meta property="og:image" content="https://xmonie.com/assets/og-preview.jpg">
+    <meta property="og:image" content="xmonie.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -29,10 +29,10 @@
     {
       "@context": "https://schema.org",
       "@type": "FinancialService",
-      "name": "XMONIE",
-      "url": "https://xmonie.com",
-      "logo": "https://xmonie.com/logo.png",
-      "description": "Premium VTU platform for Airtime, Data, and Utility Bill payments in Nigeria.",
+     "name": "XMONIE",
+      "url": "https://xmonie.vercel.app",
+      "logo": "xmonie.jpg",
+      "description": "Premium VTU platform for Airtime, Data,Nin, followers and Utility Bill payments in Nigeria.",
       "address": {
         "@type": "PostalAddress",
         "addressCountry": "NG"
