--- a/deposit.html
+++ b/deposit.html
@@ -67,12 +67,12 @@
                     <div class="bg-slate-950/50 p-6 rounded-3xl border border-slate-800 space-y-4">
                         <div class="flex flex-col">
                             <span class="text-[10px] font-bold text-slate-500 uppercase">Bank Name</span>
-                            <span class="text-lg font-bold">Palm pay</span>
+                            <span class="text-lg font-bold">KOLOMONI PSB</span>
                         </div>
                         <div class="flex flex-col relative">
                             <span class="text-[10px] font-bold text-slate-500 uppercase">Account Number</span>
                             <div class="flex items-center justify-between">
-                                <span class="text-2xl font-black tracking-wider text-white" id="accNo">7070735202</span>
+                                <span class="text-2xl font-black tracking-wider text-white" id="accNo">0992105812</span>
                                 <button onclick="copyAcc()" class="p-2 bg-green-600/10 text-green-500 rounded-lg hover:bg-green-600/20 transition-colors">
                                     <i data-lucide="copy" class="w-5 h-5"></i>
                                 </button>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="flex flex-col">
                             <span class="text-[10px] font-bold text-slate-500 uppercase">Account Name</span>
-                            <span class="text-sm font-bold text-slate-300">Emmanuel Onyedikachukwu James</span>
+                            <span class="text-sm font-bold text-slate-300"></span>
                         </div>
                     </div>
 
