--- a/deposit.html
+++ b/deposit.html
@@ -80,7 +80,7 @@
                         </div>
                         <div class="flex flex-col">
                             <span class="text-[10px] font-bold text-slate-500 uppercase">Account Name</span>
-                            <span class="text-sm font-bold text-slate-300"></span>
+                            <span class="text-sm font-bold text-slate-300">ERCAS-xixapay ask datasub</span>
                         </div>
                     </div>
 
